samples/Sample3.java
// Step 'palantir-java-format' found problem in 'samples/Sample3.java':
// error: Imports not contiguous (perhaps a comment separates them?)
// com.palantir.javaformat.java.FormatterException: error: Imports not contiguous (perhaps a comment separates them?)

import java.math.BigInteger;
;

import java.math.BigDecimal;
